<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddsrouter_tool</name>
  <version>2.0.0</version>
  <description>
     *eprosima DDS Router* Application to execute a DDS Router from a YAML configuration file.
  </description>
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="javierparis@eprosima.com">Javier París</maintainer>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/DDS-Router/issues</url>
  <url type="repository">https://github.com/eProsima/DDS-Router</url>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>cmake_utils</depend>
  <depend>cpp_utils</depend>
  <depend>ddsrouter_yaml</depend>
  <depend>ddsrouter_core</depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>googletest-distribution</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
